recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:3: error: not found: value step
    avance(length+increment*step);
                            ^